[gd_scene load_steps=3 format=3 uid="uid://csdmgetagn410"]

[ext_resource type="Script" path="res://Scripts/item_container.gd" id="1_4o4jj"]
[ext_resource type="Texture2D" uid="uid://cvo10bsngc4f3" path="res://Assets/penzilla.vector-icon-pack/Icon_Award.png" id="2_qhiwh"]

[node name="ItemXContainer" type="VBoxContainer"]
script = ExtResource("1_4o4jj")

[node name="CostLabel" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"LabelMoney"
text = "1$"
horizontal_alignment = 1

[node name="ItemTextureButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.501961)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_qhiwh")
ignore_texture_size = true
stretch_mode = 5

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
text = "ITEM"
horizontal_alignment = 1
